--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@
                 <h4>INMOBILIARIAS ADHERIDAS</h4>
                 <main class="borderTop"></main>
                 <marquee behavior="Alternate" direction="">
-                    <img src="img/Capa 5.png" alt="">
-                    <img src="img/Capa 6.png" alt="">
-                    <img src="img/Capa 7.png" alt="">
-                    <img src="img/Capa 8.png" alt="">
-                    <img src="img/Capa 9.png" alt="">
-                    <img src="img/Capa 10.png" alt="">
-                    <img src="img/Capa 5.png" alt="">
-                    <img src="img/Capa 6.png" alt="">
-                    <img src="img/Capa 7.png" alt="">
-                    <img src="img/Capa 8.png" alt="">
-                    <img src="img/Capa 9.png" alt="">
-                    <img src="img/Capa 10.png" alt="">
+                    <img class="marquee" src="img/Capa 5.png" alt="">
+                    <img class="marquee" src="img/Capa 6.png" alt="">
+                    <img class="marquee" src="img/Capa 7.png" alt="">
+                    <img class="marquee" src="img/Capa 8.png" alt="">
+                    <img class="marquee" src="img/Capa 9.png" alt="">
+                    <img class="marquee" src="img/Capa 10.png" alt="">
+                    <img class="marquee" src="img/Capa 5.png" alt="">
+                    <img class="marquee" src="img/Capa 6.png" alt="">
+                    <img class="marquee" src="img/Capa 7.png" alt="">
+                    <img class="marquee" src="img/Capa 8.png" alt="">
+                    <img class="marquee" src="img/Capa 9.png" alt="">
+                    <img class="marquee" src="img/Capa 10.png" alt="">
                 </marquee>
                 <main class="borderBottom"></main>
         </section>
