--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <div class="carousel-caption d-none d-md-block">
                                 <h1 class="textoCarousel">¡MUDATE YA!</h1>
                                 <h4 class="textoCarousel">Alquilá con la garantía Monclair</h4>
-                                <div class="btn-more" id="buttonCorousel"><a class="btn btn-slider"  href="#" role="button"><img id="calculadora" src="img/calculator.png" alt="">Calculador de costos  </a></div>
+                                <div class="btn-more" id="buttonCorousel"><a class="btn btn-slider"  href="#" role="button"><img id="calculadora" src="img/calculator.png" alt=""><font color=white>Calculador de costos</font></a></div>
                                 
                             </div>
                           </div>
