--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                              </div>
     
                              <div class="soli col-lg-12" id="header">
-                             <li class="garantia"><a href="#"><p>Solicitá tu</p><p class="otroFormato1">garantía</p></a></li>
-                             <li class="garantia"><a href="#"><p>Seguí tu</p><p class="otroFormato1">solicitud</p></a></li>
+                             <li class="garantia"><a href="#"><p><font color=black>Solicitá tu</font></p><p class="otroFormato1">garantía</p></a></li>
+                             <li class="garantia"><a href="#"><p><font color=black>Seguí tu</font></p><p class="otroFormato1">solicitud</p></a></li>
                             </div>
     
                     </div>
