--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <title>MONCLAIR</title>
 </head>
 <body>
@@ -108,7 +109,7 @@
                     <p class="linkItems">INFORMACIÓN<br>PARA INMOBILIARIAS</p> 
                     <a href=""><img class="linkItems" src="img/move-to-next copia 2.png" alt=""></a> 
                 </div>    
-            <div class="link1 col-lg-3"><a href=""><img class="linkItems2" src="img/calculatorBoton.png" alt=""></a><p class="linkItems2"> CALCULADORA<br>DE COSTOS</p> 
+            <div class="link1 col-lg-3"><a href=""><img class="linkItems2" src="img/calculatorBoton.png" alt=""></a><p class="linkItems2">CALCULADORA<br>DE COSTOS</p> 
                  </div>
         </Section>
         <section> 
@@ -175,7 +176,7 @@
             </div>
             <div>
                     <img class="footerItems" src="img/telephone.png" alt="">
-                    <ul class="footerItems2">
+                    <ul class="footerItems">
                         <li >(011) 4394-8476 Lineas rotativas</li>
                         <li >Cel.: (011) 2371-8866</li>
                         <li >Cel.: (011) 4161-9016</li>
@@ -183,21 +184,21 @@
                         <li>de 10:00 a 18:00 horas</li>
                     </ul>
                 </div>
-            <div class="divTres">
-                    <ul class="footerItems">
+            <div   class="divTres">
+                    <ul id="ultTres" class="footerItems">
                         <li >Quienes somos</li>
                         <li >Inmobiliarias Adheridas</li>
                     </ul>
                 </div>
-            <div>
-                    <ul class="footerItems">
+            <div  class="divTres">
+                    <ul id="ultTres" class="footerItems">
                         <li >Solicitá tu garantía</li>
                         <li >Seguí tu solicitud</li>
                         <li >Calculadora de costos</li>
                     </ul>
                 </div>
-            <div>
-                    <ul class="footerItems">
+            <div class="divTres">
+                    <ul id="ultTres" class="footerItems">
                         <li >web360 - Marketing Digital</li>
                         
                     </ul>
