--- a/index.html
+++ b/index.html
@@ -100,11 +100,6 @@
 
         </section>
         <Section class="links1">
-            
-            <!-- <div class="link1 col-lg-3"><p class="linkItems">INFORMACIÓN<br>PARA EL INQUILINO</p> 
-                <a href=""><img id="moveUno" class="linkItems" src="img/move-to-next copia 2.png" alt=""></a> </div>
-            <div class="link1 col-lg-3"><p class="linkItems">INFORMACIÓN<br>PARA EL PROPIETARIO</p> 
-                <a href=""><img class="linkItems" src="img/move-to-next copia 2.png" alt=""></a> </div> -->
             <div class="link1 col-lg-3"> 
                     <p class="linkItems">INFORMACIÓN<br>PARA EL INQUILINO</p> 
                     <a href=""><img class="linkItems" src="img/move-to-next copia 2.png" alt=""></a> 
@@ -182,7 +177,7 @@
                     <li >(C1053ABR)</li>
                 </ul>
             </div>
-            <div>
+            <div class="divTress">
                     <img class="footerItems" src="img/telephone.png" alt="">
                     <ul class="footerItems">
                         <li >(011) 4394-8476 Lineas rotativas</li>
@@ -192,7 +187,7 @@
                         <li>de 10:00 a 18:00 horas</li>
                     </ul>
                 </div>
-            <div   class="divTres">
+            <div class="divTres">
                     <ul id="ultTres" class="footerItems">
                         <li >Quienes somos</li>
                         <li >Inmobiliarias Adheridas</li>
